Added project pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>document</title>
+    <title>Home</title>
     <!--Stylesheet and JavaScript files-->
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/5dad9558ff.js" crossorigin="anonymous"></script>
@@ -22,8 +22,8 @@
             <li><a href="#hero"> <i class="fa-regular fa-house"></i> Home</a></li>
             <li><a href="#about"> <i class="fa-regular fa-user"></i> About</a></li>
             <li><a href="projectsList.html"> <i class="fa-regular fa-folder"></i> Projects</a></li>
-            <li><a href="https://drive.google.com/file/d/1gQmgitE46qrUP_dNsPT9-fQWPlo2VsbW/view?usp=sharing"> <i
-                        class="fa-regular fa-file"></i> Resume </a></li>
+            <li><a href="https://drive.google.com/file/d/1gQmgitE46qrUP_dNsPT9-fQWPlo2VsbW/view?usp=sharing"
+                    target="_blank" rel="noopener noreferrer"> <i class="fa-regular fa-file"></i> Resume </a></li>
             <li><a href="#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
         </ul>
     </nav>
@@ -99,7 +99,7 @@
 
                 <div class="skills-buttons-container">
                     <span class="skill-button">AutoCAD</span>
-                    <span class="skill-button">SolidWorks</span>
+                    <span class="skill-button">SOLIDWORKS</span>
                     <span class="skill-button"><i class="fa-brands fa-html5"></i> HTML5</span>
                     <span class="skill-button"><i class="fa-brands fa-css3-alt"></i> CSS3</span>
                     <span class="skill-button"><i class="fa-brands fa-js"></i> JavaScript</span>
@@ -115,18 +115,21 @@
                 </div>
             </div>
         </section>
-<!--Featured Projects-->
+        <!--Featured Projects-->
         <section id="projects">
             <h2 style="padding-left: 20px; padding-top: 20px;">Featured Projects </h2>
-            <div id = "projects-description-container">
-                <p class="base-text"> Some of my favorite projects that I've worked on! Click the "see more" button to view all projects.</p>
-               <a href = "projectsList.html"><button class="general-button" style = "padding-top: 5px; padding-bottom: 5px;"> SEE MORE <i class="fa-solid fa-arrow-up open-arrow"></i> </button></a> 
+            <div id="projects-description-container">
+                <p class="base-text"> Some of my favorite projects that I've worked on! Click the "see more" button to
+                    view all projects.</p>
+                <a href="projectsList.html"><button class="general-button"
+                        style="padding-top: 5px; padding-bottom: 5px;"> SEE MORE <i
+                            class="fa-solid fa-arrow-up open-arrow"></i> </button></a>
             </div>
             <div id="highlighted-projects-container">
 
             </div>
         </section>
-<!--Contact info-->
+        <!--Contact info-->
         <section id="contact">
             <div id="contact-content-container">
                 <h2>Contact</h2>
@@ -159,12 +162,12 @@
             </div>
 
         </section>
-<!--Footer-->
+        <!--Footer-->
         <footer>
             <div>
                 <a href="#home" style="text-align:right; text-decoration:none;" id="footer-title">Jumaana Nainar</a>
             </div>
-            <p class="footer-text">© 2025 Jumaana Nainar</p>
+            <p class="footer-text">© 2026 Jumaana Nainar</p>
             <div id="footer-icon-container">
                 <a href="https://www.linkedin.com/in/jumaana-nainar">
                     <i class="fa-brands fa-linkedin-in footer-icon"></i>
@@ -180,4 +183,5 @@
     </main>
 </body>
 <script src="script.js"></script>
+
 </html>
