--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Portfolio</title>
     <!--Stylesheet and JavaScript files-->
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/5dad9558ff.js" crossorigin="anonymous"></script>
@@ -30,15 +30,50 @@
             <li><a href="index.html#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
         </ul>
     </nav>
-    <div class="project-list-title-container">
-        <h1 style="padding-top:20px; font-size: 50px;">Projects</h1>
-    </div>
 
-    <div id="projects-container" style="padding:30px;">
+
+
 
     </div>
 
-<!-- Footer -->
+    <div class="project-title-container">
+        <div class="project-title-text-container">
+            <div class="category-tag-container">
+                <span class="(category 1)-tag"> Category 1</span>
+                <span class="(Category 2)-tag"> Category 2</span>
+            </div>
+            <h3> Title</h3>
+            <p class="base-text"> <i class="fa-solid fa-calendar"></i> Time Period </p>
+            <p class="base-text" style="font-size: 22px; font-weight: 600;"> Short description</p>
+            <div class="skill-tag-container">
+                <span class="skill-tag"> Skill 1</span>
+                <span class="skill-tag"> Skill 2</span>
+                <span class="skill-tag"> Skill 3</span>
+            </div>
+        </div>
+        <img src="" class="project-header-image">
+    </div>
+
+
+    <div class="description">
+        <h2> Header</h2>
+        <div class="section">
+
+            <ul class="bullet-list">
+                <li class="base-text"> Content
+                </li>
+                <li class="base-text">Content
+                </li>
+                <li class="base-text">Content
+                </li>
+            </ul>
+            <img src="" class="project-header-image">
+        </div>
+    </div>
+<div class = "view-more">
+<a href = "projectsList.html"><button class = "general-button" style = "transform: scale(1.5);">Return to Project List </button></a>
+</div>
+    <!--Footer-->
     <footer>
         <div>
             <a href="index.html#hero" style="text-align:right; text-decoration:none;" id="footer-title">Jumaana
@@ -58,6 +93,5 @@
         </div>
     </footer>
 </body>
-<script src="projectsList.js"></script>
 
 </html>
