Adding preliminary mobile styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Home</title>
     <!--Stylesheet and JavaScript files-->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css">
     <script src="https://kit.fontawesome.com/5dad9558ff.js" crossorigin="anonymous"></script>
     <!-- importing fonts -->
     <style>
@@ -97,21 +98,21 @@
                     Engineering Skills
                 </div>
 
-                <div class="skills-buttons-container">
-                    <span class="skill-button">AutoCAD</span>
-                    <span class="skill-button">SOLIDWORKS</span>
-                    <span class="skill-button"><i class="fa-brands fa-html5"></i> HTML5</span>
-                    <span class="skill-button"><i class="fa-brands fa-css3-alt"></i> CSS3</span>
-                    <span class="skill-button"><i class="fa-brands fa-js"></i> JavaScript</span>
-                    <span class="skill-button">VS Code</span>
+                <div class="skills-pills-container">
+                    <span class="skill-pill">AutoCAD</span>
+                    <span class="skill-pill">SOLIDWORKS</span>
+                    <span class="skill-pill"><i class="fa-brands fa-html5"></i> HTML5</span>
+                    <span class="skill-pill"><i class="fa-brands fa-css3-alt"></i> CSS3</span>
+                    <span class="skill-pill"><i class="fa-brands fa-js"></i> JavaScript</span>
+                    <span class="skill-pill">VS Code</span>
                 </div>
 
                 <div class="skill-title">Productivity</div>
-                <div class="skills-spans-container">
-                    <span class="skill-button">Microsoft 365</span>
-                    <span class="skill-button"><i class="fa-brands fa-google"></i> Google Workspace</span>
-                    <span class="skill-button">Slack</span>
-                    <span class="skill-button"><i class="fa-brands fa-figma"></i> Figma</span>
+                <div class="skills-pills-container">
+                    <span class="skill-pill">Microsoft 365</span>
+                    <span class="skill-pill"><i class="fa-brands fa-google"></i> Google Workspace</span>
+                    <span class="skill-pill">Slack</span>
+                    <span class="skill-pill"><i class="fa-brands fa-figma"></i> Figma</span>
                 </div>
             </div>
         </section>
@@ -165,10 +166,10 @@
         <!--Footer-->
         <footer>
             <div>
-                <a href="#home" style="text-align:right; text-decoration:none;" id="footer-title">Jumaana Nainar</a>
+                <a href="#home" style="text-align:right; text-decoration:none;" class="footer-title">Jumaana Nainar</a>
             </div>
             <p class="footer-text">© 2026 Jumaana Nainar</p>
-            <div id="footer-icon-container">
+            <div class="footer-icon-container">
                 <a href="https://www.linkedin.com/in/jumaana-nainar">
                     <i class="fa-brands fa-linkedin-in footer-icon"></i>
                 </a>
