--- a/portfolio.html
+++ b/portfolio.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Age of Adventure</title>
     <!--Stylesheet and JavaScript files-->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css">
     <script src="https://kit.fontawesome.com/5dad9558ff.js" crossorigin="anonymous"></script>
 
     <!-- importing fonts -->
@@ -39,16 +40,17 @@
     <div class="project-title-container">
         <div class="project-title-text-container">
             <div class="category-tag-container">
-                <span class="(category 1)-tag"> Category 1</span>
-                <span class="(Category 2)-tag"> Category 2</span>
+                <span class="web-dev-tag">Web-dev</span>
+                <span class="individual-tag">Individual</span>
             </div>
-            <h3> Title</h3>
-            <p class="base-text"> <i class="fa-solid fa-calendar"></i> Time Period </p>
-            <p class="base-text" style="font-size: 22px; font-weight: 600;"> Short description</p>
+            <h3>Portfolio Website</h3>
+            <p class="base-text"> <i class="fa-solid fa-calendar"></i> December 2025 - January 2026</p>
+            <p class="base-text" style="font-size: 22px; font-weight: 600;">A custom-designed and developed portfolio
+                website that highlights my skills, experience, and projects I’ve worked on</p>
             <div class="skill-tag-container">
-                <span class="skill-tag"> Skill 1</span>
-                <span class="skill-tag"> Skill 2</span>
-                <span class="skill-tag"> Skill 3</span>
+                <span class="skill-tag">HTML5</span>
+                <span class="skill-tag">JavaScript</span>
+                <span class="skill-tag">CSS3</span>
             </div>
         </div>
         <img src="" class="project-header-image">
@@ -70,17 +72,20 @@
             <img src="" class="project-header-image">
         </div>
     </div>
-<div class = "view-more">
-<a href = "projectsList.html"><button class = "general-button" style = "transform: scale(1.5);">Return to Project List </button></a>
-</div>
+
+    <div class="view-more">
+        <a href="projectsList.html"><button class="general-button" style="transform: scale(1.5);">Return to Project List
+            </button></a>
+    </div>
+
     <!--Footer-->
     <footer>
         <div>
-            <a href="index.html#hero" style="text-align:right; text-decoration:none;" id="footer-title">Jumaana
+            <a href="index.html#hero" style="text-align:right; text-decoration:none;" class="footer-title">Jumaana
                 Nainar</a>
         </div>
         <p class="footer-text">© 2026 Jumaana Nainar</p>
-        <div id="footer-icon-container">
+        <div class="footer-icon-container">
             <a href="https://www.linkedin.com/in/jumaana-nainar">
                 <i class="fa-brands fa-linkedin-in footer-icon"></i>
             </a>
