--- a/ageOfAdventure.html
+++ b/ageOfAdventure.html
@@ -6,6 +6,7 @@
     <title>Age of Adventure</title>
     <!--Stylesheet and JavaScript files-->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css">
     <script src="https://kit.fontawesome.com/5dad9558ff.js" crossorigin="anonymous"></script>
 
     <!-- importing fonts -->
@@ -49,9 +50,9 @@
                 video game that incorporates object-oriented-programming and DOM manipulation to follow a storyline
                 dependent on user input.
             <div class="skill-tag-container">
-                <span class="skill-tag">HTML</span>
+                <span class="skill-tag">HTML5</span>
                 <span class="skill-tag">JavaScript</span>
-                <span class="skill-tag">CSS</span>
+                <span class="skill-tag">CSS3</span>
             </div>
 
         </div>
@@ -129,11 +130,11 @@
     <!--Footer-->
     <footer>
         <div>
-            <a href="index.html#hero" style="text-align:right; text-decoration:none;" id="footer-title">Jumaana
+            <a href="index.html#hero" style="text-align:right; text-decoration:none;" class="footer-title">Jumaana
                 Nainar</a>
         </div>
         <p class="footer-text">© 2026 Jumaana Nainar</p>
-        <div id="footer-icon-container">
+        <div class="footer-icon-container">
             <a href="https://www.linkedin.com/in/jumaana-nainar">
                 <i class="fa-brands fa-linkedin-in footer-icon"></i>
             </a>
