--- a/projectsList.html
+++ b/projectsList.html
@@ -6,6 +6,7 @@
     <title>Projects</title>
     <!--Stylesheet and JavaScript files-->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css">
     <script src="https://kit.fontawesome.com/5dad9558ff.js" crossorigin="anonymous"></script>
 
     <!-- importing fonts -->
@@ -41,11 +42,11 @@
 <!-- Footer -->
     <footer>
         <div>
-            <a href="index.html#hero" style="text-align:right; text-decoration:none;" id="footer-title">Jumaana
+            <a href="index.html#hero" style="text-align:right; text-decoration:none;" class="footer-title">Jumaana
                 Nainar</a>
         </div>
         <p class="footer-text">© 2026 Jumaana Nainar</p>
-        <div id="footer-icon-container">
+        <div class="footer-icon-container">
             <a href="https://www.linkedin.com/in/jumaana-nainar">
                 <i class="fa-brands fa-linkedin-in footer-icon"></i>
             </a>
