Updated mobile styling and created mobile menu

--- a/ageOfAdventure.html
+++ b/ageOfAdventure.html
@@ -31,12 +31,20 @@
             <li><a href="index.html#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
         </ul>
     </nav>
+    
+<div id="sideMenu" class="sidemenu">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <a href="index.html#hero"> <i class="fa-regular fa-house"></i> Home</a>
+                <a href="index.html#about"><i class="fa-regular fa-user"></i> About</a>
+                <a href="projectsList.html"> <i class="fa-regular fa-folder"></i> Projects</a>
+                <a href="https://drive.google.com/file/d/1gQmgitE46qrUP_dNsPT9-fQWPlo2VsbW/view?usp=sharing"
+                    target="_blank" rel="noopener noreferrer"> <i class="fa-regular fa-file"></i> Resume </a>
+                <a href="index.html#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a>
+            </div>
 
+            <button class="openbutton" onclick="openNav()"> <i class="fa-solid fa-bars"></i> Menu
 
-
-
-    </div>
-
+            </button>
     <div class="project-title-container">
         <div class="project-title-text-container">
             <div class="category-tag-container">
@@ -121,12 +129,14 @@
                 </li>
             </ul>
 
-            <iframe src="https://drive.google.com/file/d/1s5YMlRaHyKLTnq0DYPizJam0FGhh8adB/preview" width="1200px" height="300px"></iframe>
+            <iframe src="https://drive.google.com/file/d/1s5YMlRaHyKLTnq0DYPizJam0FGhh8adB/preview" width="1200px"
+                height="300px"></iframe>
         </div>
     </div>
-<div class = "view-more">
-<a href = "projectsList.html"><button class = "general-button" style = "transform: scale(1.5);">Return to Project List </button></a>
-</div>
+    <div class="view-more">
+        <a href="projectsList.html"><button class="general-button" style="transform: scale(1.5);">Return to Project List
+            </button></a>
+    </div>
     <!--Footer-->
     <footer>
         <div>
@@ -147,5 +157,6 @@
         </div>
     </footer>
 </body>
+<script src="script.js"></script>
 
 </html>
