--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 </head>
 
 <body>
+
     <!--Navbar-->
     <nav>
+
         <a href="#hero" class="logo">Jumaana Nainar</a>
         <ul>
             <li><a href="#hero"> <i class="fa-regular fa-house"></i> Home</a></li>
@@ -27,12 +29,29 @@
                     target="_blank" rel="noopener noreferrer"> <i class="fa-regular fa-file"></i> Resume </a></li>
             <li><a href="#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
         </ul>
+
     </nav>
+
 
     <!-- Main body -->
     <main>
+
         <!--Hero-->
         <section id="hero">
+
+            <div id="sideMenu" class="sidemenu">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <a href="#hero"> <i class="fa-regular fa-house"></i> Home</a>
+                <a href="#about"><i class="fa-regular fa-user"></i> About</a>
+                <a href="projectsList.html"> <i class="fa-regular fa-folder"></i> Projects</a>
+                <a href="https://drive.google.com/file/d/1gQmgitE46qrUP_dNsPT9-fQWPlo2VsbW/view?usp=sharing"
+                    target="_blank" rel="noopener noreferrer"> <i class="fa-regular fa-file"></i> Resume </a>
+                <a href="#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a>
+            </div>
+
+            <button class="openbutton" onclick="openNav()"> <i class="fa-solid fa-bars"></i> Menu
+
+            </button>
             <div id="hero-container">
 
                 <div id="hero-text">
