--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,19 @@
             <li><a href="index.html#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
         </ul>
     </nav>
+ <div id="sideMenu" class="sidemenu">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <a href="index.html#hero"> <i class="fa-regular fa-house"></i> Home</a>
+                <a href="index.html#about"><i class="fa-regular fa-user"></i> About</a>
+                <a href="projectsList.html"> <i class="fa-regular fa-folder"></i> Projects</a>
+                <a href="https://drive.google.com/file/d/1gQmgitE46qrUP_dNsPT9-fQWPlo2VsbW/view?usp=sharing"
+                    target="_blank" rel="noopener noreferrer"> <i class="fa-regular fa-file"></i> Resume </a>
+                <a href="index.html#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a>
+            </div>
 
+            <button class="openbutton" onclick="openNav()"> <i class="fa-solid fa-bars"></i> Menu
+
+            </button>
 
 
 
@@ -98,5 +110,5 @@
         </div>
     </footer>
 </body>
-
+<script src="script.js"></script>
 </html>
