Completed base mobile styling

--- a/formulaSnail.html
+++ b/formulaSnail.html
@@ -31,21 +31,6 @@
         </ul>
     </nav>
 
-
-<div id="sideMenu" class="sidemenu">
-                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <a href="index.html#hero"> <i class="fa-regular fa-house"></i> Home</a>
-                <a href="index.html#about"><i class="fa-regular fa-user"></i> About</a>
-                <a href="projectsList.html"> <i class="fa-regular fa-folder"></i> Projects</a>
-                <a href="https://drive.google.com/file/d/1gQmgitE46qrUP_dNsPT9-fQWPlo2VsbW/view?usp=sharing"
-                    target="_blank" rel="noopener noreferrer"> <i class="fa-regular fa-file"></i> Resume </a>
-                <a href="index.html#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a>
-            </div>
-
-            <button class="openbutton" onclick="openNav()"> <i class="fa-solid fa-bars"></i> Menu
-
-            </button>
-
     <div class="project-title-container">
         <div class="project-title-text-container">
             <div class="category-tag-container">
@@ -106,7 +91,8 @@
 
 
                 </li>
-                <li class="base-text">Coordinated weekly project goals using Excel, strengthening communication and collaboration
+                <li class="base-text">Coordinated weekly project goals using Excel, strengthening communication and
+                    collaboration
                     within the team
 
                 </li>
@@ -117,15 +103,15 @@
             </ul>
             <div class="multiple-images">
                 <figure>
-                    <img src="images/straightTrack.png" class="image-custom" style="height: 225px; width: 315px;">
+                    <img src="images/straightTrack.png" class="image-custom" style="width: 315px;">
                     <figcaption>Straight track modeled in SOLIDWORKS</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/curvedTrack.png" class="image-custom" style="height: 225px; width: 460px;">
+                    <img src="images/curvedTrack.png" class="image-custom" style="width: 460px;">
                     <figcaption>Curved track modeled in SOLIDWORKS</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/snailAssembly.png" class="image-custom" style="height: 225px; width: 200px;">
+                    <img src="images/snailAssembly.png" class="image-custom" style="width: 200px;">
                     <figcaption>Toy assembly in SOLIDWORKS</figcaption>
                 </figure>
 
@@ -156,8 +142,9 @@
                 <li class="base-text">Play the video to see the toy in action!
                 </li>
             </ul>
-<iframe src="https://drive.google.com/file/d/1HUBGAVSO8fB4dK8YLxUhX8EXE54tEUcA/preview" width="600px" height="250px"></iframe>
-    
+            <iframe src="https://drive.google.com/file/d/1HUBGAVSO8fB4dK8YLxUhX8EXE54tEUcA/preview" width="600px"
+                height="250px"></iframe>
+
         </div>
     </div>
 
@@ -187,4 +174,5 @@
     </footer>
 </body>
 <script src="script.js"></script>
+
 </html>
