--- a/ageOfAdventure.html
+++ b/ageOfAdventure.html
@@ -31,20 +31,7 @@
             <li><a href="index.html#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
         </ul>
     </nav>
-    
-<div id="sideMenu" class="sidemenu">
-                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <a href="index.html#hero"> <i class="fa-regular fa-house"></i> Home</a>
-                <a href="index.html#about"><i class="fa-regular fa-user"></i> About</a>
-                <a href="projectsList.html"> <i class="fa-regular fa-folder"></i> Projects</a>
-                <a href="https://drive.google.com/file/d/1gQmgitE46qrUP_dNsPT9-fQWPlo2VsbW/view?usp=sharing"
-                    target="_blank" rel="noopener noreferrer"> <i class="fa-regular fa-file"></i> Resume </a>
-                <a href="index.html#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a>
-            </div>
 
-            <button class="openbutton" onclick="openNav()"> <i class="fa-solid fa-bars"></i> Menu
-
-            </button>
     <div class="project-title-container">
         <div class="project-title-text-container">
             <div class="category-tag-container">
@@ -90,7 +77,7 @@
         <div class="section">
 
             <figure>
-                <img src="images/packingCode.png" class="image-custom" style="height: 350px; width: 400px;">
+                <img src="images/packingCode.png" class="image-custom" style="width: 300px;">
                 <figcaption>Sample code of logic for packing backpack</figcaption>
             </figure>
 
