Base website completed

--- a/project-page-template/index.html
+++ b/project-page-template/index.html
@@ -1,12 +1,11 @@
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>(Project)</title>
+    <title>Project Title</title>
     <!--Stylesheet and JavaScript files-->
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../../mobile.css">
     <script src="https://kit.fontawesome.com/5dad9558ff.js" crossorigin="anonymous"></script>
 
     <!-- importing fonts -->
@@ -21,47 +20,32 @@
     <!--Navbar-->
 
     <nav>
-        <a href="index.html#hero" class="logo">Jumaana Nainar</a>
+        <a href="../../#hero" class="logo">Jumaana Nainar</a>
         <ul>
-            <li><a href="index.html#hero"> <i class="fa-regular fa-house"></i> Home</a></li>
-            <li><a href="index.html#about"> <i class="fa-regular fa-user"></i> About</a></li>
-            <li><a href="projectsList.html"> <i class="fa-regular fa-folder"></i> Projects</a></li>
+            <li><a href="../../"> <i class="fa-regular fa-house"></i> Home</a></li>
+            <li><a href="../../#about"> <i class="fa-regular fa-user"></i> About</a></li>
+            <li><a href="/projects"> <i class="fa-regular fa-folder"></i> Projects</a></li>
             <li><a href="https://drive.google.com/file/d/1gQmgitE46qrUP_dNsPT9-fQWPlo2VsbW/view?usp=sharing"
                     target="_blank" rel="noopener noreferrer"> <i class="fa-regular fa-file"></i> Resume </a></li>
-            <li><a href="index.html#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
+            <li><a href="../../#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
         </ul>
     </nav>
-
-<div id="sideMenu" class="sidemenu">
-                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <a href="index.html#hero"> <i class="fa-regular fa-house"></i> Home</a>
-                <a href="index.html#about"><i class="fa-regular fa-user"></i> About</a>
-                <a href="projectsList.html"> <i class="fa-regular fa-folder"></i> Projects</a>
-                <a href="https://drive.google.com/file/d/1gQmgitE46qrUP_dNsPT9-fQWPlo2VsbW/view?usp=sharing"
-                    target="_blank" rel="noopener noreferrer"> <i class="fa-regular fa-file"></i> Resume </a>
-                <a href="index.html#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a>
-            </div>
-
-            <button class="openbutton" onclick="openNav()"> <i class="fa-solid fa-bars"></i> Menu
-
-            </button>
-
 
     </div>
 
     <div class="project-title-container">
         <div class="project-title-text-container">
             <div class="category-tag-container">
-                <span class="(category 1)-tag"> Category 1</span>
-                <span class="(Category 2)-tag"> Category 2</span>
+                <span class="(Category 1)-tag">Category 1</span>
+                <span class="(Category 2)-tag">Category 2</span>
             </div>
-            <h3> Title</h3>
-            <p class="base-text"> <i class="fa-solid fa-calendar"></i> Time Period </p>
-            <p class="base-text" style="font-size: 22px; font-weight: 600;"> Short description</p>
+            <h3>Project Title</h3>
+            <p class="base-text"> <i class="fa-solid fa-calendar"></i>Time period</p>
+            <p class="base-text" style="font-size: 22px; font-weight: 600;">Short description</p>
             <div class="skill-tag-container">
-                <span class="skill-tag"> Skill 1</span>
-                <span class="skill-tag"> Skill 2</span>
-                <span class="skill-tag"> Skill 3</span>
+                <span class="skill-tag">Skill 1</span>
+                <span class="skill-tag">Skill 2</span>
+                <span class="skill-tag">Skill 3</span>
             </div>
         </div>
         <img src="" class="project-header-image">
@@ -84,10 +68,15 @@
         </div>
     </div>
 
+    <div class="view-more">
+        <a href="/projects/"><button class="general-button" style="transform: scale(1.5);">Return to Project List
+            </button></a>
+    </div>
+
     <!--Footer-->
     <footer>
         <div>
-            <a href="index.html#hero" style="text-align:right; text-decoration:none;" class="footer-title">Jumaana
+            <a href="../../#hero" style="text-align:right; text-decoration:none;" class="footer-title">Jumaana
                 Nainar</a>
         </div>
         <p class="footer-text">© 2026 Jumaana Nainar</p>
@@ -104,5 +93,4 @@
         </div>
     </footer>
 </body>
-<script src="script.js"></script>
 </html>
