--- a/projects/formula-snail/index.html
+++ b/projects/formula-snail/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formula Snail</title>
     <!--Stylesheet and JavaScript files-->
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../../mobile.css">
     <script src="https://kit.fontawesome.com/5dad9558ff.js" crossorigin="anonymous"></script>
 
     <!-- importing fonts -->
@@ -20,14 +20,14 @@
     <!--Navbar-->
 
     <nav>
-        <a href="index.html#hero" class="logo">Jumaana Nainar</a>
+        <a href="../../#hero" class="logo">Jumaana Nainar</a>
         <ul>
-            <li><a href="index.html#hero"> <i class="fa-regular fa-house"></i> Home</a></li>
-            <li><a href="index.html#about"> <i class="fa-regular fa-user"></i> About</a></li>
-            <li><a href="projectsList.html"> <i class="fa-regular fa-folder"></i> Projects</a></li>
+            <li><a href="../../"> <i class="fa-regular fa-house"></i> Home</a></li>
+            <li><a href="../../#about"> <i class="fa-regular fa-user"></i> About</a></li>
+            <li><a href="/projects"> <i class="fa-regular fa-folder"></i> Projects</a></li>
             <li><a href="https://drive.google.com/file/d/1gQmgitE46qrUP_dNsPT9-fQWPlo2VsbW/view?usp=sharing"
                     target="_blank" rel="noopener noreferrer"> <i class="fa-regular fa-file"></i> Resume </a></li>
-            <li><a href="index.html#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
+            <li><a href="../../#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
         </ul>
     </nav>
 
@@ -51,7 +51,7 @@
                 <span class="skill-tag">MS Excel/Word</span>
             </div>
         </div>
-        <img src="images/snail on track.jpg" class="project-header-image">
+        <img src="../../images/snail on track.jpg" class="project-header-image">
     </div>
 
 
@@ -86,12 +86,12 @@
                     design for prototyping
 
                 </li>
-                <li class="base-text">Expanded SOLIDWORKS and AutoCAD skills to model components, test integration and
+                <li class="base-text">Expanded <span class = "highlight">SOLIDWORKS</span> and <span class = "highlight">AutoCAD</span> skills to model components, test integration and
                     support rapid iteration
 
 
                 </li>
-                <li class="base-text">Coordinated weekly project goals using Excel, strengthening communication and
+                <li class="base-text">Coordinated weekly project goals using <span class = "highlight">Excel</span>, strengthening communication and
                     collaboration
                     within the team
 
@@ -103,15 +103,15 @@
             </ul>
             <div class="multiple-images">
                 <figure>
-                    <img src="images/straightTrack.png" class="image-custom" style="width: 315px;">
+                    <img src="../../images/straightTrack.png" class="image-custom" style="width: 315px;">
                     <figcaption>Straight track modeled in SOLIDWORKS</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/curvedTrack.png" class="image-custom" style="width: 460px;">
+                    <img src="../../images/curvedTrack.png" class="image-custom" style="width: 460px;">
                     <figcaption>Curved track modeled in SOLIDWORKS</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/snailAssembly.png" class="image-custom" style="width: 200px;">
+                    <img src="../../images/snailAssembly.png" class="image-custom" style="width: 200px;">
                     <figcaption>Toy assembly in SOLIDWORKS</figcaption>
                 </figure>
 
@@ -150,13 +150,13 @@
 
 
     <div class="view-more">
-        <a href="projectsList.html"><button class="general-button" style="transform: scale(1.5);">Return to Project List
+        <a href="/projects/"><button class="general-button" style="transform: scale(1.5);">Return to Project List
             </button></a>
     </div>
     <!--Footer-->
     <footer>
         <div>
-            <a href="index.html#hero" style="text-align:right; text-decoration:none;" class="footer-title">Jumaana
+            <a href="../../#hero" style="text-align:right; text-decoration:none;" class="footer-title">Jumaana
                 Nainar</a>
         </div>
         <p class="footer-text">© 2026 Jumaana Nainar</p>
@@ -173,6 +173,5 @@
         </div>
     </footer>
 </body>
-<script src="script.js"></script>
 
 </html>
