--- a/projects/age-of-adventure/index.html
+++ b/projects/age-of-adventure/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Age of Adventure</title>
     <!--Stylesheet and JavaScript files-->
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../../mobile.css">
     <script src="https://kit.fontawesome.com/5dad9558ff.js" crossorigin="anonymous"></script>
 
     <!-- importing fonts -->
@@ -21,14 +21,14 @@
     <!--Navbar-->
 
     <nav>
-        <a href="index.html#hero" class="logo">Jumaana Nainar</a>
+        <a href="../../#hero" class="logo">Jumaana Nainar</a>
         <ul>
-            <li><a href="index.html#hero"> <i class="fa-regular fa-house"></i> Home</a></li>
-            <li><a href="index.html#about"> <i class="fa-regular fa-user"></i> About</a></li>
-            <li><a href="projectsList.html"> <i class="fa-regular fa-folder"></i> Projects</a></li>
+            <li><a href="../../"> <i class="fa-regular fa-house"></i> Home</a></li>
+            <li><a href="../../#about"> <i class="fa-regular fa-user"></i> About</a></li>
+            <li><a href="/projects"> <i class="fa-regular fa-folder"></i> Projects</a></li>
             <li><a href="https://drive.google.com/file/d/1gQmgitE46qrUP_dNsPT9-fQWPlo2VsbW/view?usp=sharing"
                     target="_blank" rel="noopener noreferrer"> <i class="fa-regular fa-file"></i> Resume </a></li>
-            <li><a href="index.html#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
+            <li><a href="../../#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
         </ul>
     </nav>
 
@@ -51,7 +51,7 @@
             </div>
 
         </div>
-        <img src="images/packing.png" class="project-header-image">
+        <img src="../../images/packing.png" class="project-header-image">
     </div>
 
 
@@ -63,7 +63,7 @@
                 <li class="base-text"> Create an interactive, web-based game that allows users to make decisions to
                     influence upcoming events and explore multiple narrative pathways
                 </li>
-                <li class="base-text">Demonstrate and improve proficiency in JavaScript, DOM manipulation, and UI/UX
+                <li class="base-text">Demonstrate and improve proficiency in <span class = "highlight">JavaScript</span>, DOM manipulation, and UI/UX
                     through a creative project with minimal restrictions and support
                 </li>
             </ul>
@@ -77,17 +77,17 @@
         <div class="section">
 
             <figure>
-                <img src="images/packingCode.png" class="image-custom" style="width: 300px;">
+                <img src="../../images/packingCode.png" class="image-custom" style="width: 300px;">
                 <figcaption>Sample code of logic for packing backpack</figcaption>
             </figure>
 
             <ul class="bullet-list">
                 <li class="base-text"> Developed global state variables and dynamic updates to facilitate
                     consistent,
-                    responsive gameplay
+                    responsive gameplay using <span class = "highlight">JavaScript</span>
 
                 </li>
-                <li class="base-text">Structured the HTML and CSS layout to optimize UI design
+                <li class="base-text">Structured the <span class = "highlight">HTML</span> and <span class = "highlight">CSS</span> layout to optimize UI design
                 </li>
                 <li class="base-text">Designed and mapped multiple story branches, including the entire narrative
                     flow
@@ -121,13 +121,13 @@
         </div>
     </div>
     <div class="view-more">
-        <a href="projectsList.html"><button class="general-button" style="transform: scale(1.5);">Return to Project List
+        <a href="/projects/"><button class="general-button" style="transform: scale(1.5);">Return to Project List
             </button></a>
     </div>
     <!--Footer-->
     <footer>
         <div>
-            <a href="index.html#hero" style="text-align:right; text-decoration:none;" class="footer-title">Jumaana
+            <a href="../../#hero" style="text-align:right; text-decoration:none;" class="footer-title">Jumaana
                 Nainar</a>
         </div>
         <p class="footer-text">© 2026 Jumaana Nainar</p>
@@ -144,6 +144,4 @@
         </div>
     </footer>
 </body>
-<script src="script.js"></script>
-
 </html>
