--- a/projects/index.html
+++ b/projects/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <!--Stylesheet and JavaScript files-->
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../mobile.css">
     <script src="https://kit.fontawesome.com/5dad9558ff.js" crossorigin="anonymous"></script>
 
     <!-- importing fonts -->
@@ -21,14 +21,14 @@
     <!--Navbar-->
 
     <nav>
-        <a href="index.html#hero" class="logo">Jumaana Nainar</a>
+        <a href="../#hero" class="logo">Jumaana Nainar</a>
         <ul>
-            <li><a href="index.html#hero"> <i class="fa-regular fa-house"></i> Home</a></li>
-            <li><a href="index.html#about"> <i class="fa-regular fa-user"></i> About</a></li>
-            <li><a href="projectsList.html"> <i class="fa-regular fa-folder"></i> Projects</a></li>
+            <li><a href="../#hero"> <i class="fa-regular fa-house"></i> Home</a></li>
+            <li><a href="../#about"> <i class="fa-regular fa-user"></i> About</a></li>
+            <li><a href="/projects/"> <i class="fa-regular fa-folder"></i> Projects</a></li>
             <li><a href="https://drive.google.com/file/d/1gQmgitE46qrUP_dNsPT9-fQWPlo2VsbW/view?usp=sharing"
                     target="_blank" rel="noopener noreferrer"> <i class="fa-regular fa-file"></i> Resume </a></li>
-            <li><a href="index.html#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
+            <li><a href="../#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
         </ul>
     </nav>
 
@@ -45,7 +45,7 @@
     <!-- Footer -->
     <footer>
         <div>
-            <a href="index.html#hero" style="text-align:right; text-decoration:none;" class="footer-title">Jumaana
+            <a href="../#hero" style="text-align:right; text-decoration:none;" class="footer-title">Jumaana
                 Nainar</a>
         </div>
         <p class="footer-text">© 2026 Jumaana Nainar</p>
@@ -62,7 +62,5 @@
         </div>
     </footer>
 </body>
-<script src="projectsList.js"></script>
-<script src="script.js"></script>
-
+<script src="../projectsList.js"></script>
 </html>
