--- a/projects/portfolio-website/index.html
+++ b/projects/portfolio-website/index.html
@@ -25,7 +25,7 @@
         <ul>
             <li><a href="../../"> <i class="fa-regular fa-house"></i> Home</a></li>
             <li><a href="../../#about"> <i class="fa-regular fa-user"></i> About</a></li>
-            <li><a href="/projects"> <i class="fa-regular fa-folder"></i> Projects</a></li>
+            <li><a href="../../projects"> <i class="fa-regular fa-folder"></i> Projects</a></li>
             <li><a href="https://drive.google.com/file/d/1gQmgitE46qrUP_dNsPT9-fQWPlo2VsbW/view?usp=sharing"
                     target="_blank" rel="noopener noreferrer"> <i class="fa-regular fa-file"></i> Resume </a></li>
             <li><a href="../../#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
@@ -96,7 +96,7 @@
     <div class="description">
         <h2>Results</h2>
         <div class="section">
-            <img src="" class="project-header-image">
+            <img src="../../images/responsiveDesign.png" class="project-header-image">
             <ul class="bullet-list">
                 <li class="base-text"> Created a fully functional, responsive, and visually cohesive portfolio website
                 </li>
@@ -110,7 +110,7 @@
     </div>
 
     <div class="view-more">
-        <a href="/projects/"><button class="general-button" style="transform: scale(1.5);">Return to Project List
+        <a href="../../projects/"><button class="general-button" style="transform: scale(1.5);">Return to Project List
             </button></a>
     </div>
 
