--- a/formula-snail.html
+++ b/formula-snail.html
@@ -5,48 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formula Snail</title>
     <!--Stylesheet and JavaScript files-->
-    <link rel="stylesheet" href="../../style.css">
-    <link rel="stylesheet" href="../../mobile.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css">
     <script src="https://kit.fontawesome.com/5dad9558ff.js" crossorigin="anonymous"></script>
 
     <!-- importing fonts -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
     </style>
-<script>
-  const isGitHub = location.hostname.endsWith("github.io");
-  if (isGitHub) {
-    const base = "/Portfolio/";
-    document.querySelectorAll("link[rel='stylesheet']").forEach(link => {
-      link.href = base + link.getAttribute("href").replace(/^(\.\.\/)+/, "");
-    });
-    document.querySelectorAll("script[src]").forEach(script => {
-      if (!script.src.startsWith("http")) {
-        script.src = base + script.getAttribute("src").replace(/^(\.\.\/)+/, "");
-      }
-    });
-    document.querySelectorAll("a").forEach(a => {
-      const href = a.getAttribute("href");
-      if (href && !href.startsWith("http") && !href.startsWith("#")) {
-        a.href = base + href.replace(/^(\.\.\/)+/, "");
-      }
-    });
-  }
-</script>
 </head>
 
 <body>
     <!--Navbar-->
 
     <nav>
-        <a href="../../#hero" class="logo">Jumaana Nainar</a>
+        <a href="index.html/#hero" class="logo">Jumaana Nainar</a>
         <ul>
-            <li><a href="../../"> <i class="fa-regular fa-house"></i> Home</a></li>
-            <li><a href="../../#about"> <i class="fa-regular fa-user"></i> About</a></li>
-            <li><a href="../../projects"> <i class="fa-regular fa-folder"></i> Projects</a></li>
+            <li><a href="index.html/#hero"> <i class="fa-regular fa-house"></i> Home</a></li>
+            <li><a href="index.html/#about"> <i class="fa-regular fa-user"></i> About</a></li>
+            <li><a href="index.html/projects"> <i class="fa-regular fa-folder"></i> Projects</a></li>
             <li><a href="https://drive.google.com/file/d/1gQmgitE46qrUP_dNsPT9-fQWPlo2VsbW/view?usp=sharing"
                     target="_blank" rel="noopener noreferrer"> <i class="fa-regular fa-file"></i> Resume </a></li>
-            <li><a href="../../#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
+            <li><a href="index.html/#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
         </ul>
     </nav>
 
@@ -70,7 +50,7 @@
                 <span class="skill-tag">MS Excel/Word</span>
             </div>
         </div>
-        <img src="../../images/snail on track.jpg" class="project-header-image">
+        <img src="images/snail on track.jpg" class="project-header-image">
     </div>
 
 
@@ -122,15 +102,15 @@
             </ul>
             <div class="multiple-images">
                 <figure>
-                    <img src="../../images/straightTrack.png" class="image-custom" style="width: 315px;">
+                    <img src="images/straightTrack.png" class="image-custom" style="width: 315px;">
                     <figcaption>Straight track modeled in SOLIDWORKS</figcaption>
                 </figure>
                 <figure>
-                    <img src="../../images/curvedTrack.png" class="image-custom" style="width: 460px;">
+                    <img src="images/curvedTrack.png" class="image-custom" style="width: 460px;">
                     <figcaption>Curved track modeled in SOLIDWORKS</figcaption>
                 </figure>
                 <figure>
-                    <img src="../../images/snailAssembly.png" class="image-custom" style="width: 200px;">
+                    <img src="images/snailAssembly.png" class="image-custom" style="width: 200px;">
                     <figcaption>Toy assembly in SOLIDWORKS</figcaption>
                 </figure>
 
@@ -169,13 +149,13 @@
 
 
     <div class="view-more">
-        <a href="../../projects/"><button class="general-button" style="transform: scale(1.5);">Return to Project List
+        <a href="projects.html"><button class="general-button" style="transform: scale(1.5);">Return to Project List
             </button></a>
     </div>
     <!--Footer-->
     <footer>
         <div>
-            <a href="../../#hero" style="text-align:right; text-decoration:none;" class="footer-title">Jumaana
+            <a href="index.html/#hero" style="text-align:right; text-decoration:none;" class="footer-title">Jumaana
                 Nainar</a>
         </div>
         <p class="footer-text">© 2026 Jumaana Nainar</p>
