--- a/holiday-market-venture.html
+++ b/holiday-market-venture.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Title</title>
     <!--Stylesheet and JavaScript files-->
-    <link rel="stylesheet" href="../../style.css">
-    <link rel="stylesheet" href="../../mobile.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css">
     <script src="https://kit.fontawesome.com/5dad9558ff.js" crossorigin="anonymous"></script>
 
     <!-- importing fonts -->
@@ -40,14 +40,14 @@
     <!--Navbar-->
 
     <nav>
-        <a href="../../#hero" class="logo">Jumaana Nainar</a>
+        <a href="index.html/#hero" class="logo">Jumaana Nainar</a>
         <ul>
-            <li><a href="../../"> <i class="fa-regular fa-house"></i> Home</a></li>
-            <li><a href="../../#about"> <i class="fa-regular fa-user"></i> About</a></li>
-            <li><a href="../../projects"> <i class="fa-regular fa-folder"></i> Projects</a></li>
+            <li><a href="index.html/#hero"> <i class="fa-regular fa-house"></i> Home</a></li>
+            <li><a href="index.html/#about"> <i class="fa-regular fa-user"></i> About</a></li>
+            <li><a href="index.html/projects"> <i class="fa-regular fa-folder"></i> Projects</a></li>
             <li><a href="https://drive.google.com/file/d/1gQmgitE46qrUP_dNsPT9-fQWPlo2VsbW/view?usp=sharing"
                     target="_blank" rel="noopener noreferrer"> <i class="fa-regular fa-file"></i> Resume </a></li>
-            <li><a href="../../#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
+            <li><a href="index.html/#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
         </ul>
     </nav>
 
@@ -64,7 +64,7 @@
             <p class="base-text" style="font-size: 22px; font-weight: 600;">Organized and ran a pop-up shop at a local
                 holiday market to sell handmade jewelery</p>
         </div>
-        <figure> <img src="../../images/sale.jpg" class="project-header-image">
+        <figure> <img src="images/sale.jpg" class="project-header-image">
             <figcaption><a
                     href="https://www.freepik.com/free-vector/flat-design-flea-market-concept_11906737.htm#fromView=search&page=3&position=23&uuid=ac01d641-b90d-4460-a1e4-8bd24da23f69&query=flea+market+booth"
                     style="font-size: 10px;">Image by freepik</a>
@@ -120,14 +120,14 @@
 
 
     <div class="view-more">
-        <a href="../../projects/"><button class="general-button" style="transform: scale(1.5);">Return to Project List
+        <a href="projects.html"><button class="general-button" style="transform: scale(1.5);">Return to Project List
             </button></a>
     </div>
 
     <!--Footer-->
     <footer>
         <div>
-            <a href="../../#hero" style="text-align:right; text-decoration:none;" class="footer-title">Jumaana
+            <a href="#hero" style="text-align:right; text-decoration:none;" class="footer-title">Jumaana
                 Nainar</a>
         </div>
         <p class="footer-text">© 2026 Jumaana Nainar</p>
