--- a/index.html
+++ b/index.html
@@ -12,26 +12,6 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
     </style>
-<script>
-  const isGitHub = location.hostname.endsWith("github.io");
-  if (isGitHub) {
-    const base = "/Portfolio/";
-    document.querySelectorAll("link[rel='stylesheet']").forEach(link => {
-      link.href = base + link.getAttribute("href").replace(/^(\.\.\/)+/, "");
-    });
-    document.querySelectorAll("script[src]").forEach(script => {
-      if (!script.src.startsWith("http")) {
-        script.src = base + script.getAttribute("src").replace(/^(\.\.\/)+/, "");
-      }
-    });
-    document.querySelectorAll("a").forEach(a => {
-      const href = a.getAttribute("href");
-      if (href && !href.startsWith("http") && !href.startsWith("#")) {
-        a.href = base + href.replace(/^(\.\.\/)+/, "");
-      }
-    });
-  }
-</script>
 
 </head>
 
@@ -44,7 +24,7 @@
         <ul>
             <li><a href="#hero"> <i class="fa-regular fa-house"></i> Home</a></li>
             <li><a href="#about"> <i class="fa-regular fa-user"></i> About</a></li>
-            <li><a href="../../projects/"> <i class="fa-regular fa-folder"></i> Projects</a></li>
+            <li><a href="projects.html"> <i class="fa-regular fa-folder"></i> Projects</a></li>
             <li><a href="https://drive.google.com/file/d/1gQmgitE46qrUP_dNsPT9-fQWPlo2VsbW/view?usp=sharing"
                     target="_blank" rel="noopener noreferrer"> <i class="fa-regular fa-file"></i> Resume </a></li>
             <li><a href="#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
@@ -148,7 +128,7 @@
             <div id="projects-description-container">
                 <p class="base-text"> Some of my favorite projects that I've worked on! Click the "see more" button to
                     view all projects.</p>
-                <a href="../../projects/"><button class="general-button" style="padding-top: 5px; padding-bottom: 5px;"> SEE
+                <a href="projects.html"><button class="general-button" style="padding-top: 5px; padding-bottom: 5px;"> SEE
                         MORE <i class="fa-solid fa-arrow-up open-arrow"></i> </button></a>
             </div>
             <div id="highlighted-projects-container">
