Minor fix in link error

--- a/portfolio-website.html
+++ b/portfolio-website.html
@@ -22,12 +22,12 @@
     <nav>
         <a href="index.html/#hero" class="logo">Jumaana Nainar</a>
         <ul>
-            <li><a href="index.html/#hero"> <i class="fa-regular fa-house"></i> Home</a></li>
-            <li><a href="index.html/#about"> <i class="fa-regular fa-user"></i> About</a></li>
+            <li><a href="index.html#hero"> <i class="fa-regular fa-house"></i> Home</a></li>
+            <li><a href="index.html#about"> <i class="fa-regular fa-user"></i> About</a></li>
             <li><a href="index.html/projects"> <i class="fa-regular fa-folder"></i> Projects</a></li>
             <li><a href="https://drive.google.com/file/d/1gQmgitE46qrUP_dNsPT9-fQWPlo2VsbW/view?usp=sharing"
                     target="_blank" rel="noopener noreferrer"> <i class="fa-regular fa-file"></i> Resume </a></li>
-            <li><a href="index.html/#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
+            <li><a href="index.html#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
         </ul>
     </nav>
 
@@ -116,7 +116,7 @@
     <!--Footer-->
     <footer>
         <div>
-            <a href="index.html/#hero" style="text-align:right; text-decoration:none;" class="footer-title">Jumaana
+            <a href="index.html#hero" style="text-align:right; text-decoration:none;" class="footer-title">Jumaana
                 Nainar</a>
         </div>
         <p class="footer-text">© 2026 Jumaana Nainar</p>
