--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
         <ul>
             <li><a href="index.html#hero"> <i class="fa-regular fa-house"></i> Home</a></li>
             <li><a href="index.html#about"> <i class="fa-regular fa-user"></i> About</a></li>
-            <li><a href="index.html/projects"> <i class="fa-regular fa-folder"></i> Projects</a></li>
+            <li><a href="projects.html"> <i class="fa-regular fa-folder"></i> Projects</a></li>
             <li><a href="https://drive.google.com/file/d/1gQmgitE46qrUP_dNsPT9-fQWPlo2VsbW/view?usp=sharing"
                     target="_blank" rel="noopener noreferrer"> <i class="fa-regular fa-file"></i> Resume </a></li>
             <li><a href="index.html#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
