--- a/holiday-market-venture.html
+++ b/holiday-market-venture.html
@@ -40,7 +40,7 @@
     <!--Navbar-->
 
     <nav>
-        <a href="index.html/#hero" class="logo">Jumaana Nainar</a>
+        <a href="index.html#hero" class="logo">Jumaana Nainar</a>
         <ul>
             <li><a href="index.html#hero"> <i class="fa-regular fa-house"></i> Home</a></li>
             <li><a href="index.html#about"> <i class="fa-regular fa-user"></i> About</a></li>
